--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -320,11 +320,9 @@
 
 	.footer-right, .footer-contact-data{
 		display: flex;
-		/* align-items por defecto tiene el valor `stretch` */
 		flex-direction: row;
   		flex-wrap: wrap;
 		align-items: center;
-		color: white;
 	}
 
 	.footer-contact-data > *{
@@ -333,7 +331,10 @@
 
 	.footer-text{
 		padding-left: 30px;
-		padding-top: 30px;
+	}
+
+	.footer-contact-data > h2{
+		color: whitesmoke;
 	}
 
 /***********************************************************************************************************************/
@@ -449,7 +450,7 @@
 				opacity: 0.6;
 			}
 	
-	/****************************************************** ventana modal ***************************************************/
+	/****************************************************** abrir catalogo ***************************************************/
 
 			:root {
 			  --lightgray: #efefef;
@@ -457,11 +458,6 @@
 			  --white: #fff;
 			  --black: rgba(0, 0, 0, 0.8);
 			  --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
-			}
-			 
-			.container-modal > * {
-			  padding: 0;
-			  margin: 0;
 			}
 			 
 			button {
@@ -472,96 +468,6 @@
 			  font-size: inherit;
 			}
 
-			.modal-section{
-				height: 15px;
-				overflow: hidden;
-			}
-
-			/*CUSTOM VARIABLES HERE*/
-			.container-modal {
-			  display: flex;
-			  align-items: center;
-			  justify-content: center;
-			  height: 100vh;
-			  font: 16px/1.5 sans-serif;
-			}
-			 
-			.btn-group {
-			  text-align: center;
-			}
-
-			.modal { 
-				position: fixed;
-				top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				padding: 1rem;
-				background: var(--black);
-				cursor: pointer;
-				visibility: hidden;
-				opacity: 0;
-				transition: all 0.35s ease-in;
-			}
-
-			/*CUSTOM VARIABLES HERE*/
- 
-			.modal-dialog {
-				position: relative;
-				max-width: 800px;
-				max-height: 80vh;
-				border-radius: 5px;
-				background: var(--white);
-				overflow: auto;
-				cursor: default;
-			}
-			/*CUSTOM VARIABLES HERE*/
- 
-			.modal-dialog > * {
-				padding: 1rem;
-			}
-			 
-			.modal-header,
-			.modal-footer {
-				background: var(--lightgray);
-			}
-			 
-			.modal-header {
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-			}
-			 
-			.modal-header .modal-close {
-				font-size: 1.5rem;
-			}
-			 
-			.modal p + p {
-				margin-top: 1rem;
-			}
-
-			.modal {
-				visibility: hidden;
-				opacity: 0;
-				transition: all 0.35s ease-in;
-			}
-			 
-			.modal.is-visible {
-			 	visibility: visible;
-			 	opacity: 1;
-			}
-
-			.close-modal:hover{
-				background:rgba(0,0,0,0.1);
-			}
-
-			.close-modal:active{
-				background:rgba(0,0,0,0.3);
-			}
-			
 		/************************************************************************************************************************/
 
 	@media all and (max-width: 1100px){
