actualizacion boton cerrar ventana modal catalogo

--- a/assets/css/catalogs.css
+++ b/assets/css/catalogs.css
@@ -402,6 +402,10 @@
 			 	opacity: 1;
 			}
 
+			.close-modal{
+				position: fixed;
+			}
+
 			.close-modal:hover{
 				background:rgba(0,0,0,0.1);
 			}
